Fix all PMD issues and update code for compatibility